v1.3.3 - TBD
  Fixed Inverter crash. sigh.



v1.3.2 - October 1, 2020
  Energy Suspension Bridge can now overwrite replaceable blocks.
   - Area is no longer considered obstructed if it contains tall grass.
  Advanced Ore Refinery:
   - Now requires 20 seconds to do an operation, twice as long as a Furnace.
   - Now requires 8,000 energy per operation instead of 5,000.
  Fixed block transparency issues:
   - Portal to the Unknown Dimension energy blocks.
   - Energy Storage Container.
   - Energy Suspension Bridge blocks (but only for horizontal bridges)
   - Laser energy blocks.
  Fix Fusion Energy Structure Laser Beam was solid and not transparent.
   - Only for 1.15 version.
  Added an Auto Shutoff toggle to the Portal Control Panel.
  Fixed crashes regarding ticking TileEntities, LazyOptional.orElseGet(), and getCapabilities().
   - Only for 1.14 and 1.15 versions.
  Compressor:
   - Now has an input filter.
   - Fixed Hoppers being able to put items into an inaccessible 2nd slot.
  Made machine Map Colors more accurate.
  Energy Storage Container no longer sounds like Glass.
  Fixed the Fusion Chamber being broken in a weird manner.
   - Only for 1.14 and 1.15 versions.



v1.3.1 - August 13, 2020
  No longer changes Music Box track instrument when you set notes.
   - Change track instrument by clicking the instrument button beside each track.
  Added a config option to control blending effects in certain machines.
  Added Gem Converter advancements.
  Reduced the Number of Compressor Slots from 2 to 1.
   - Removed the Bronze Ingot compressor recipe. You now get Bronze from crafting
     3 Copper Ingots and 1 Tin Ingot.
For Minecraft 1.14 and 1.15 versions Only:
  Fix warnings in console log relating to inaccessible block loot table entries.
   - Also fixes not being able to silk-touch Gem Ore blocks.
  Fixed: Gem Ores now drop experience again.
  Fix description for Void Crystal advancement not being translated.